objects/SLSI__SL_IntranetApplicationSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To set the SI application parameters for widgets and sections</description>
    <fields>
        <fullName>SLSI__Max_Number_of_FeedPosts__c</fullName>
        <label>Max Number of FeedPosts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Of_Days_For_Recent_Hires__c</fullName>
        <label># Of Days For Recent Hires</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Recent_Updates_Days_Threshold__c</fullName>
        <label>Recent Updates Days Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__WaterCooler_App_Id__c</fullName>
        <label>WaterCooler App Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>SL_IntranetApplicationSetting</label>
</CustomObject>